# urirun-connector-connectorgen

./: README.md  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_connectorgen.py
urirun_connector_connectorgen/: __init__.py  core.py
